# ChangeLog for net-dns/bind-tools
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.95 2008/05/04 08:14:38 dertobi123 Exp $

  04 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  bind-tools-9.4.2.ebuild:
  Do actually link libidnkit when USE=idn, #218686

  03 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> -files/nslookup.8,
  -bind-tools-9.2.7.ebuild, -bind-tools-9.3.3.ebuild:
  Nuke 9.2.7 and 9.3.3 (# 208676)

*bind-tools-9.4.2 (03 May 2008)

  03 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +bind-tools-9.4.2.ebuild:
  Bump to 9.4.2, include dnssec-keygen (# 198721).

  29 Feb 2008; Raúl Porcel <armin76@gentoo.org> bind-tools-9.2.6-r3.ebuild,
  bind-tools-9.2.8-r1.ebuild, bind-tools-9.3.2-r3.ebuild,
  bind-tools-9.3.4-r1.ebuild:
  alpha/ia64/sparc/x86 stable

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> bind-tools-9.4.1_p1.ebuild:
  Stable on mips, per #186556.

  31 Jul 2007; Christoph Mende <angelos@gentoo.org>
  bind-tools-9.4.1_p1.ebuild:
  Stable on amd64 wrt security bug #186556

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> bind-tools-9.4.1_p1.ebuild:
  Stable on ppc64; bug #186556

  28 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  bind-tools-9.4.1_p1.ebuild:
  ppc stable, bug #186556

  28 Jul 2007; Raúl Porcel <armin76@gentoo.org> bind-tools-9.4.1_p1.ebuild:
  alpha/ia64/x86 stable wrt security #186556

  27 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  bind-tools-9.4.1_p1.ebuild:
  Stable on sparc wrt security #186556

  27 Jul 2007; Jeroen Roovers <jer@gentoo.org> bind-tools-9.4.1_p1.ebuild:
  Stable for HPPA (bug #186556).

  27 Jul 2007; Seemant Kulleen <seemant@gentoo.org>
  bind-tools-9.4.1_p1.ebuild:
  fix the version info in the SRC_URI mangling so that the fetch succeeds

*bind-tools-9.4.1_p1 (27 Jul 2007)

  27 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  +bind-tools-9.4.1_p1.ebuild:
  Version bump, bug #186556
