@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.95 2008/05/04 08:14:38 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.96 2008/06/04 20:09:15 dertobi123 Exp $
+
+*bind-tools-9.5.0 (04 Jun 2008)
+
+  04 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  +bind-tools-9.5.0.ebuild:
+  Version bump, #224239
 
   04 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   bind-tools-9.4.2.ebuild:
